# BlockFrame

./: .gitignore  README.md  Readme.md  block_frame.db  build.bat  config.json  library_design.md  main.py  pyproject.toml  requirements.txt  setup.py  tempCodeRunnerFile.py
BlockFrame/: block_frame.py
BlockFrame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BlockFrame/chunking_service/: chunking.py  config.py
BlockFrame/database_service/: database.py  defaultmodel.py  getters.py  initalisation.py
lib/: block_frame.py
lib/chunking_service/: chunking.py  config.py
lib/database_service/: database.py  defaultmodel.py  initalisation.py
